# asksql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: desktop.yml  release.yml  tests.yml
desktop/: README.md  sidecar.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
src/asksql/: __main__.py  cli.py  connections.py  demo.py  export.py  llm.py  models.py  safety.py  secrets.py  service.py  sql.py  sqlite.py  tui.py  workspace.py
src/asksql/adapters/: __init__.py  base.py  postgres.py  registry.py  sqlite.py
src/asksql/studio/: __init__.py  jobs.py  server.py  writes.py
src/asksql/studio/static/: index.html
src/asksql/studio/static/assets/: index-C8CoauAB.js  index-ChR4ZPMK.js  index-Cu3679dg.css  index-D22DtEQp.js  index-DPRnaSyS.css  index-DtDQp9Bs.css
tests/: test_adapters.py  test_connections.py  test_demo.py  test_export.py  test_llm.py  test_postgres_integration.py  test_safety.py  test_secrets.py  test_service.py  test_sql.py  test_sqlite.py  test_studio.py  test_studio_jobs.py  test_studio_writes.py  test_tui.py  test_workspace.py  test_write_cli.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: studio.spec.ts
web/src/: App.vue  api.ts  styles.css  types.ts
web/src/components/: ConnectionDialog.vue  HistoryPanel.vue  ModelDialog.vue  ResultsGrid.test.ts  ResultsGrid.vue  SchemaTree.test.ts  SchemaTree.vue  SqlEditor.vue  WriteReviewDialog.vue
web/src/stores/: studio.ts
