[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asksql"
version = "0.1.0"
description = "Ask your database questions from the terminal."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "asksql contributors" }]
keywords = ["sql", "sqlite", "ollama", "openai", "text-to-sql", "cli"]
dependencies = ["rich>=13.7", "sqlglot>=30.0", "textual>=8.2"]

[project.scripts]
asksql = "asksql.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
