[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asksql"
version = "0.3.0"
description = "Ask SQLite and PostgreSQL questions from Studio, the terminal, or the TUI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "adabarbulescu" }]
keywords = ["sql", "sqlite", "ollama", "openai", "text-to-sql", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "fastapi>=0.115,<1",
    "keyring>=25,<26",
    "rich>=13.7",
    "sqlglot>=30.0,<31",
    "textual>=8.2",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "coverage>=7.6",
    "httpx>=0.28",
    "mypy>=1.11",
    "ruff>=0.6",
    "setuptools>=69",
    "twine>=5.1",
]
postgres = ["psycopg[binary]>=3.2,<4"]

[project.urls]
Homepage = "https://github.com/adabarbulescu/asksql"
Issues = "https://github.com/adabarbulescu/asksql/issues"
Source = "https://github.com/adabarbulescu/asksql"

[project.scripts]
asksql = "asksql.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asksql = ["py.typed", "studio/static/**"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["asksql"]
ignore_missing_imports = true
warn_unused_ignores = true
